rev41 - starscript naming overhaul, new accompanying documentation on the wiki, various utilities such as formatted text builders, and other various tweaks & improvements.